--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Sunday</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
         padding: 0;
         margin: 0;
